changing name of development container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,4 @@
 {
-    "name": "Jekyll",
+    "name": "tomdemaypro development container",
     "image": "mcr.microsoft.com/devcontainers/jekyll:2-bullseye"
 }
