major refactoring. Fixing headshots and details summary issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     // "editor.formatOnSave": false,
     // "files.autoSave": "off",
-    "files.autoSave": "onFocusChange",    
+    "files.autoSave": "afterDelay",
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[scss]": {
         "editor.defaultFormatter": "vscode.css-language-features"
